--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "chalk": "4.1.2",
     "commander": "12.0.0",
     "fs-extra": "11.2.0",
-    "hap-nodejs": "0.11.2",
+    "hap-nodejs": "0.11.3-alpha.0",
     "qrcode-terminal": "0.12.0",
     "semver": "7.6.0",
     "source-map-support": "0.5.21"
@@ -57,19 +57,21 @@
     "@types/debug": "^4.1.12",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.12.6",
     "@types/semver": "^7.5.8",
     "@types/source-map-support": "^0.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import-newlines": "^1.4.0",
+    "eslint-plugin-jest": "^28.2.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.25.12",
-    "typescript": "^5.4.3"
+    "typedoc": "^0.25.13",
+    "typescript": "^5.4.4"
   }
 }
