Updated dependencies (`hap-nodejs`)

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "chalk": "4.1.2",
     "commander": "12.0.0",
     "fs-extra": "11.2.0",
-    "hap-nodejs": "0.12.0",
+    "hap-nodejs": "0.12.1-beta.0",
     "qrcode-terminal": "0.12.0",
     "semver": "7.6.0",
     "source-map-support": "0.5.21"
@@ -58,11 +58,11 @@
     "@types/debug": "^4.1.12",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.12.8",
     "@types/semver": "^7.5.8",
     "@types/source-map-support": "^0.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-import-newlines": "^1.4.0",
