--- a/package.json
+++ b/package.json
@@ -49,16 +49,16 @@
     "chalk": "4.1.2",
     "commander": "12.0.0",
     "fs-extra": "11.2.0",
-    "hap-nodejs": "0.12.1-beta.0",
+    "hap-nodejs": "0.12.1",
     "qrcode-terminal": "0.12.0",
-    "semver": "7.6.0",
+    "semver": "7.6.2",
     "source-map-support": "0.5.21"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.8",
+    "@types/node": "^20.12.11",
     "@types/semver": "^7.5.8",
     "@types/source-map-support": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
@@ -66,10 +66,10 @@
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-import-newlines": "^1.4.0",
-    "eslint-plugin-jest": "^28.3.0",
+    "eslint-plugin-jest": "^28.5.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "rimraf": "^5.0.5",
+    "rimraf": "^5.0.6",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typedoc": "^0.25.13",
