--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homebridge",
   "description": "HomeKit support for the impatient",
-  "version": "1.8.3",
+  "version": "1.8.4",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "license": "Apache-2.0",
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "npm run clean && tsc",
     "check": "npm install && npm outdated",
-    "clean": "rimraf lib/",
+    "clean": "npm install rimraf && rimraf lib/",
     "dev": "DEBUG=* ./bin/homebridge -D -P example-plugins/ || true",
     "docs": "typedoc",
     "lint": "eslint 'src/**/*.{js,ts,json}'",
@@ -51,26 +51,26 @@
     "fs-extra": "11.2.0",
     "hap-nodejs": "0.12.2",
     "qrcode-terminal": "0.12.0",
-    "semver": "7.6.2",
+    "semver": "7.6.3",
     "source-map-support": "0.5.21"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.10",
+    "@types/node": "^20.14.11",
     "@types/semver": "^7.5.8",
     "@types/source-map-support": "^0.5.10",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-import-newlines": "^1.4.0",
     "eslint-plugin-jest": "^28.6.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
-    "rimraf": "^5.0.9",
-    "ts-jest": "^29.2.2",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typedoc": "^0.26.4",
     "typescript": "^5.5.3"
