minor dependency updates (#3781)
- Added method updateDisplayName() (#3764) (@justjam2013)
- Fixed method handleUpdatePlatformAccessories() (#3765) (@justjam2013)
- Make it possible to set Characteristic.SerialNumber via config.json (#3761) (@vvorcun)
- minor dependency updates
- fix: check for valid array in `handleUpdatePlatformAccessories`
- minor dependency updates

- `hap-nodejs` @ `v0.12.3`

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,7 +32,7 @@
     "import-newlines/enforce": ["error", 3],
 
     "@typescript-eslint/no-unsafe-declaration-merging": "off",
-
-    "@typescript-eslint/no-non-null-assertion": "off" // currently disabled, hap-nodejs has some bad typing (like getCharacteristic) for this to be enabled
+    "@typescript-eslint/no-non-null-assertion": "off", // currently disabled, hap-nodejs has some bad typing (like getCharacteristic) for this to be enabled
+    "@typescript-eslint/no-unused-vars": ["error", { "caughtErrors": "none" }],
   }
 }
